Fixed overflow on perfil-detail

--- a/Static/css/comunidapp.css
+++ b/Static/css/comunidapp.css
@@ -330,7 +330,7 @@ a:hover{
     margin-left: 20px;
     padding: 20px;
     height: 100px;
-    width: 215px;
+    max-width: 40%;
     border: 1px solid #DFDFDF;
     box-sizing: border-box;                            
     border-radius: 4px;
@@ -345,6 +345,8 @@ a:hover{
 .tab-content>.active{
     display: flex;
     flex-wrap: wrap !important;
+    justify-content: flex-start;
+    max-width: 80%;
 }
 
 /* Cambios Module */
